feat: migrate CI secrets to Hanzo KMS
All workflow secrets now fetched from Hanzo KMS (kms.hanzo.ai) via
Universal Auth. Only KMS_CLIENT_ID and KMS_CLIENT_SECRET remain as
GitHub org secrets.

--- a/.github/workflows/pullrequest-ci-run.yml
+++ b/.github/workflows/pullrequest-ci-run.yml
@@ -1,3 +1,4 @@
+# Secrets: Hanzo KMS (kms.hanzo.ai) — auth via Hanzo IAM
 # This is the GitHub Workflow that drives full-GPU-enabled tests of pull requests to Hanzo Studio, when the 'Run-CI-Test' label is added
 # Results are reported as checkmarks on the commits, as well as onto https://ci.hanzo.ai/
 name: Pull Request CI Workflow Runs
@@ -27,13 +28,20 @@ jobs:
             flags: ""
     runs-on: ${{ matrix.runner_label }}
     steps:
+      - name: Fetch secrets from Hanzo KMS
+        id: kms
+        uses: hanzoui/.github/actions/kms-secrets@main
+        with:
+          kms_client_id: ${{ secrets.KMS_CLIENT_ID }}
+          kms_client_secret: ${{ secrets.KMS_CLIENT_SECRET }}
+          secrets: 'GCS_SERVICE_ACCOUNT_JSON'
       - name: Test Workflows
-        uses: comfy-org/comfy-action@main
+        uses: hanzoui/action@main
         with:
           os: ${{ matrix.os }}
           python_version: ${{ matrix.python_version }}
           torch_version: ${{ matrix.torch_version }}
-          google_credentials: ${{ secrets.GCS_SERVICE_ACCOUNT_JSON }}
+          google_credentials: ${{ steps.kms.outputs.GCS_SERVICE_ACCOUNT_JSON }}
           hanzo_studio_flags: ${{ matrix.flags }}
           use_prior_commit: 'true'
   comment:
