--- a/.github/workflows/stable-release.yml
+++ b/.github/workflows/stable-release.yml
@@ -107,7 +107,7 @@ jobs:
       - shell: bash
         run: |
           cd ..
-          cp -r Hanzo Studio Hanzo Studio_copy
+          cp -r Hanzo Studio HanzoStudio_copy
           curl https://www.python.org/ftp/python/3.${{ inputs.python_minor }}.${{ inputs.python_patch }}/python-3.${{ inputs.python_minor }}.${{ inputs.python_patch }}-embed-amd64.zip -o python_embeded.zip
           unzip python_embeded.zip -d python_embeded
           cd python_embeded
@@ -132,13 +132,13 @@ jobs:
           cd ..
 
           git clone --depth 1 https://github.com/hanzoai/taesd
-          cp taesd/*.safetensors ./Hanzo Studio_copy/models/vae_approx/
+          cp taesd/*.safetensors ./HanzoStudio_copy/models/vae_approx/
 
-          mkdir Hanzo Studio_windows_portable
-          mv python_embeded Hanzo Studio_windows_portable
-          mv Hanzo Studio_copy Hanzo Studio_windows_portable/Hanzo Studio
+          mkdir HanzoStudio_windows_portable
+          mv python_embeded HanzoStudio_windows_portable
+          mv HanzoStudio_copy HanzoStudio_windows_portable/Hanzo Studio
 
-          cd Hanzo Studio_windows_portable
+          cd HanzoStudio_windows_portable
 
           mkdir update
           cp -r Hanzo Studio/.ci/update_windows/* ./update/
@@ -147,14 +147,14 @@ jobs:
 
           cd ..
 
-          "C:\Program Files\7-Zip\7z.exe" a -t7z -m0=lzma2 -mx=9 -mfb=128 -md=768m -ms=on -mf=BCJ2 Hanzo Studio_windows_portable.7z Hanzo Studio_windows_portable
-          mv Hanzo Studio_windows_portable.7z Hanzo Studio/Hanzo Studio_windows_portable_${{ inputs.rel_name }}${{ inputs.rel_extra_name }}.7z
+          "C:\Program Files\7-Zip\7z.exe" a -t7z -m0=lzma2 -mx=9 -mfb=128 -md=768m -ms=on -mf=BCJ2 HanzoStudio_windows_portable.7z HanzoStudio_windows_portable
+          mv HanzoStudio_windows_portable.7z Hanzo Studio/HanzoStudio_windows_portable_${{ inputs.rel_name }}${{ inputs.rel_extra_name }}.7z
 
       - shell: bash
         if: ${{ inputs.test_release }}
         run: |
           cd ..
-          cd Hanzo Studio_windows_portable
+          cd HanzoStudio_windows_portable
           python_embeded/python.exe -s Hanzo Studio/main.py --quick-test-for-ci --cpu
 
           python_embeded/python.exe -s ./update/update.py Hanzo Studio/
@@ -164,7 +164,7 @@ jobs:
       - name: Upload binaries to release
         uses: softprops/action-gh-release@v2
         with:
-          files: Hanzo Studio_windows_portable_${{ inputs.rel_name }}${{ inputs.rel_extra_name }}.7z
+          files: HanzoStudio_windows_portable_${{ inputs.rel_name }}${{ inputs.rel_extra_name }}.7z
           tag_name: ${{ inputs.git_tag }}
           draft: true
           overwrite_files: true
