--- a/.github/workflows/windows_release_package.yml
+++ b/.github/workflows/windows_release_package.yml
@@ -55,7 +55,7 @@ jobs:
         - shell: bash
           run: |
             cd ..
-            cp -r Hanzo Studio Hanzo Studio_copy
+            cp -r Hanzo Studio HanzoStudio_copy
             curl https://www.python.org/ftp/python/3.${{ inputs.python_minor }}.${{ inputs.python_patch }}/python-3.${{ inputs.python_minor }}.${{ inputs.python_patch }}-embed-amd64.zip -o python_embeded.zip
             unzip python_embeded.zip -d python_embeded
             cd python_embeded
@@ -71,13 +71,13 @@ jobs:
             cd ..
 
             git clone --depth 1 https://github.com/hanzoai/taesd
-            cp taesd/*.safetensors ./Hanzo Studio_copy/models/vae_approx/
+            cp taesd/*.safetensors ./HanzoStudio_copy/models/vae_approx/
 
-            mkdir Hanzo Studio_windows_portable
-            mv python_embeded Hanzo Studio_windows_portable
-            mv Hanzo Studio_copy Hanzo Studio_windows_portable/Hanzo Studio
+            mkdir HanzoStudio_windows_portable
+            mv python_embeded HanzoStudio_windows_portable
+            mv HanzoStudio_copy HanzoStudio_windows_portable/Hanzo Studio
 
-            cd Hanzo Studio_windows_portable
+            cd HanzoStudio_windows_portable
 
             mkdir update
             cp -r Hanzo Studio/.ci/update_windows/* ./update/
@@ -86,10 +86,10 @@ jobs:
 
             cd ..
 
-            "C:\Program Files\7-Zip\7z.exe" a -t7z -m0=lzma2 -mx=9 -mfb=128 -md=768m -ms=on -mf=BCJ2 Hanzo Studio_windows_portable.7z Hanzo Studio_windows_portable
-            mv Hanzo Studio_windows_portable.7z Hanzo Studio/new_Hanzo Studio_windows_portable_nvidia_cu${{ inputs.cu }}_or_cpu.7z
+            "C:\Program Files\7-Zip\7z.exe" a -t7z -m0=lzma2 -mx=9 -mfb=128 -md=768m -ms=on -mf=BCJ2 HanzoStudio_windows_portable.7z HanzoStudio_windows_portable
+            mv HanzoStudio_windows_portable.7z Hanzo Studio/new_HanzoStudio_windows_portable_nvidia_cu${{ inputs.cu }}_or_cpu.7z
 
-            cd Hanzo Studio_windows_portable
+            cd HanzoStudio_windows_portable
             python_embeded/python.exe -s Hanzo Studio/main.py --quick-test-for-ci --cpu
 
             python_embeded/python.exe -s ./update/update.py Hanzo Studio/
@@ -100,7 +100,7 @@ jobs:
           uses: svenstaro/upload-release-action@v2
           with:
                 repo_token: ${{ secrets.GITHUB_TOKEN }}
-                file: new_Hanzo Studio_windows_portable_nvidia_cu${{ inputs.cu }}_or_cpu.7z
+                file: new_HanzoStudio_windows_portable_nvidia_cu${{ inputs.cu }}_or_cpu.7z
                 tag: "latest"
                 overwrite: true
 
