--- a/.github/workflows/test-launch.yml
+++ b/.github/workflows/test-launch.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: "hanzoai/studio"
-        path: "Hanzo Studio"
+        path: "HanzoStudio"
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
@@ -24,12 +24,12 @@ jobs:
         pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
         pip install -r requirements.txt
         pip install wait-for-it
-      working-directory: Hanzo Studio
+      working-directory: HanzoStudio
     - name: Start Hanzo Studio server
       run: |
         python main.py --cpu 2>&1 | tee console_output.log &
         wait-for-it --service 127.0.0.1:8188 -t 30
-      working-directory: Hanzo Studio
+      working-directory: HanzoStudio
     - name: Check for unhandled exceptions in server log
       run: |
         grep -v "Found hanzo_kitchen backend triton: {'available': False, 'disabled': True, 'unavailable_reason': \"ImportError: No module named 'triton'\", 'capabilities': \[\]}" console_output.log | grep -v "Found hanzo_kitchen backend triton: {'available': False, 'disabled': False, 'unavailable_reason': \"ImportError: No module named 'triton'\", 'capabilities': \[\]}" > console_output_filtered.log
@@ -38,10 +38,10 @@ jobs:
           echo "Unhandled exception/error found in server log."
           exit 1
         fi
-      working-directory: Hanzo Studio
+      working-directory: HanzoStudio
     - uses: actions/upload-artifact@v4
       if: always()
       with:
         name: console-output
-        path: Hanzo Studio/console_output.log
+        path: HanzoStudio/console_output.log
         retention-days: 30
