--- a/.github/workflows/windows_release_package.yml
+++ b/.github/workflows/windows_release_package.yml
@@ -55,7 +55,7 @@ jobs:
         - shell: bash
           run: |
             cd ..
-            cp -r Hanzo Studio HanzoStudio_copy
+            cp -r HanzoStudio HanzoStudio_copy
             curl https://www.python.org/ftp/python/3.${{ inputs.python_minor }}.${{ inputs.python_patch }}/python-3.${{ inputs.python_minor }}.${{ inputs.python_patch }}-embed-amd64.zip -o python_embeded.zip
             unzip python_embeded.zip -d python_embeded
             cd python_embeded
@@ -63,7 +63,7 @@ jobs:
             curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
             ./python.exe get-pip.py
             ./python.exe -s -m pip install ../cu${{ inputs.cu }}_python_deps/*
-            sed -i '1i../Hanzo Studio' ./python3${{ inputs.python_minor }}._pth
+            sed -i '1i../HanzoStudio' ./python3${{ inputs.python_minor }}._pth
 
             rm ./Lib/site-packages/torch/lib/dnnl.lib #I don't think this is actually used and I need the space
             rm ./Lib/site-packages/torch/lib/libprotoc.lib
@@ -75,24 +75,24 @@ jobs:
 
             mkdir HanzoStudio_windows_portable
             mv python_embeded HanzoStudio_windows_portable
-            mv HanzoStudio_copy HanzoStudio_windows_portable/Hanzo Studio
+            mv HanzoStudio_copy HanzoStudio_windows_portable/HanzoStudio
 
             cd HanzoStudio_windows_portable
 
             mkdir update
-            cp -r Hanzo Studio/.ci/update_windows/* ./update/
-            cp -r Hanzo Studio/.ci/windows_nvidia_base_files/* ./
+            cp -r HanzoStudio/.ci/update_windows/* ./update/
+            cp -r HanzoStudio/.ci/windows_nvidia_base_files/* ./
             cp ../update_hanzo_studio_and_python_dependencies.bat ./update/
 
             cd ..
 
             "C:\Program Files\7-Zip\7z.exe" a -t7z -m0=lzma2 -mx=9 -mfb=128 -md=768m -ms=on -mf=BCJ2 HanzoStudio_windows_portable.7z HanzoStudio_windows_portable
-            mv HanzoStudio_windows_portable.7z Hanzo Studio/new_HanzoStudio_windows_portable_nvidia_cu${{ inputs.cu }}_or_cpu.7z
+            mv HanzoStudio_windows_portable.7z HanzoStudio/new_HanzoStudio_windows_portable_nvidia_cu${{ inputs.cu }}_or_cpu.7z
 
             cd HanzoStudio_windows_portable
-            python_embeded/python.exe -s Hanzo Studio/main.py --quick-test-for-ci --cpu
+            python_embeded/python.exe -s HanzoStudio/main.py --quick-test-for-ci --cpu
 
-            python_embeded/python.exe -s ./update/update.py Hanzo Studio/
+            python_embeded/python.exe -s ./update/update.py HanzoStudio/
 
             ls
 
